<resources>
    <string name="app_name">IT справочник</string>
    <string name="action_settings">Настройки</string>
    <string name="action_search">Поиск</string>
    <string name="action_about_us">О нас</string>
    <string name="title_activity_about_us">О нас</string>
    <string name="about_us_text_footer">Since 2015.</string>
    <string name="about_us_text">
        Разработчик:ADA dev.\n
        Версия: Beta 0.1\n
        Связаться с нами:\n
        ynotved@gmail.com\n</string>
    <string name="title_activity_slidein">SlideinActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_disc">DiscActivity</string>
    <string name="title_activity_bookmark">BookmarkActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Нет закладок</string>
    <string name="assm">Assembler</string>
    <string name="asm">Assembler</string>
    <string name="Cplus">C++</string>
    <string name="nav_discipline">Дисциплины</string>
    <string name="nav_bookmark">Закладки</string>

    <string name="dis_assembler">Assembler</string>
    <string name="key_text_size">text_size</string>
    <string name="pref_continue_reading">continue_reading</string>
    <string name="pref_text_size">text_size</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_item_extra">Допольнительно</string>
    <string name="nav_asm">Assembler</string>
    <string name="nav_main">Главная</string>
    <string name="nav_other">Дополнительно</string>
</resources>
