<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item android:id="@+id/nav_main"
            android:icon="@drawable/ic_local_library_24dp"
            android:title="Главная"  />
        <item android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_grade_24dp"
            android:title="@string/nav_bookmark" />


    <item android:title="@string/nav_discipline">
        <menu>
            <item android:id="@+id/nav_asm"
                android:icon="@drawable/ic_school_24dp"
                android:title="@string/nav_asm" />
        </menu>
    </item>

<item android:title="@string/nav_other">
        <menu>
            <item android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/nav_settings" />
        </menu>
</item>
</menu>